
Thu Jun 15 17:43:21 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
		Also, remove DBMLIB, it was not used. Also, for K4, use
		KRB4_LIB and KRB4_CRYPTO_LIB, these were
                split out.
	* configure.in - Remove dbm library checks, these are no longer needed
		with the Berkeley database code.  Also, add shared library
		usage check.

Fri Jun  9 18:29:56 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Wed May  3 16:50:05 1995  Mark Eichin  <eichin@cygnus.com>

	* telnetd.c: respect HAVE_SYS_TTY_H.

Mon May  1 11:33:28 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* defs.h: Temporary hack for the alpha. Undefine STREAMSPTY if
		defined. This will be removed in a later release.

Fri Apr 28 18:07:34 1995  Mark Eichin  <eichin@cygnus.com>

	* Makefile.in (KLIB): put KRB4_LIB inside KLIB.

Thu Apr 27 13:57:03 1995  Mark Eichin  <eichin@cygnus.com>

	* Makefile.in (telnetd): use KRB4_LIB directly.
	* configure.in: use WITH_KRB4 as-is.

Wed Apr 25 22:53:20 1995  Chris Provenzano  (proven@mit.edu)

        * configure.in, sys_term.c, telnetd.c : Have configure check for
                sys/ptyvar.h and sac.h before .c files include it.

Sat Apr 22 00:52:01 1995  Theodore Y. Ts'o  (tytso@dcl)

	* telnetd.c (main): Don't use krb5_override_default_realm, as it
		is obsolete (non-existent).  Use krb5_set_default_realm
		instead. 

Fri Apr 21 12:47:57 1995  Mark Eichin  <eichin@cygnus.com>

	From Ian Taylor <ian@cygnus.com>.
	* telnetd.c (valid_opts): Add 'L'.  If KRB5, add -R and -t.
	(main): Handle -L.  If KRB5, handle -R and -t.
	* sys_term.c (login_program): New global variable.
	(start_login): Use login_program instead of LOGIN_PROGRAM.

Wed Mar 29 15:39:39 1995  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Add dependency on libtelnet.a
